--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.5",
