--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "axios": "^1.7.2",
     "framer-motion": "^11.1.7",
     "react": "^18.2.0",
+    "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
     "react-scroll": "^1.9.0",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "universal-cookie": "^7.1.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.5",
